--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 name = "metazoa-rs"
 version = "0.1.0"
-authors = ["Mathias Tervo <mathias.tervo@embark-studios.com>"]
+authors = ["Mathias Tervo <mathias.tervo@gmail.com>"]
 edition = "2018"
 
 [dependencies]
 anyhow = "1.0.38"
 gl = "*"
+glsl-watcher = { path = "../glsl-watcher", version = "0.0.1" }
 glutin = "0.26"
+notify = "4.0.12"
 winit = "0.24"
