--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,10 @@
+[workspace]
+members = [
+    "components/glsl-watcher",
+]
+
 [package]
-name = "metazoa-rs"
+name = "skuggbox-rs"
 version = "0.1.0"
 authors = ["Mathias Tervo <mathias.tervo@gmail.com>"]
 edition = "2018"
@@ -7,7 +12,7 @@ edition = "2018"
 [dependencies]
 anyhow = "1.0.38"
 gl = "*"
-glsl-watcher = { path = "../glsl-watcher", version = "0.0.1" }
+glsl-watcher = { path = "components/glsl-watcher", version = "0.0.1" }
 glutin = "0.26"
 notify = "4.0.12"
 winit = "0.24"
