--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,7 @@ anyhow = "1.0.38"
 gl = "*"
 glsl-watcher = { path = "components/glsl-watcher", version = "0.0.1" }
 glutin = "0.26"
+log = "0.4"
 notify = "4.0.12"
+simple_logger = "1.11.0"
 winit = "0.24"
