--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,11 @@ edition = "2018"
 [dependencies]
 anyhow = "1.0.38"
 gl = "*"
+glam = "0.18"
 glsl-watcher = { path = "components/glsl-watcher", version = "0.0.1" }
 glutin = "0.26"
 log = "0.4"
 notify = "4.0.12"
+serde = { version = "1.0", features = ["derive"] }
 simple_logger = "1.11.0"
 winit = "0.24"
