--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,5 @@ log = "0.4"
 notify = "4.0.12"
 serde = { version = "1.0", features = ["derive"] }
 simple_logger = "1.11.0"
+structopt = "0.3"
 winit = "0.24"
