--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = [
 ]
 
 [package]
-name = "skuggbox-rs"
+name = "skuggbox"
 version = "0.1.0"
 authors = ["Mathias Tervo <mathias.tervo@gmail.com>"]
 edition = "2018"
