--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ notify = "4.0.12"
 serde = { version = "1.0", features = ["derive"] }
 simple_logger = "1.11.0"
 winit = "0.24"
+which = "4.2.2" # Used for locating minime-preprocess
