--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = [
 ]
 
 [package]
-name = "skuggbox-rs"
+name = "skuggbox"
 version = "0.1.0"
 authors = ["Mathias Tervo <mathias.tervo@gmail.com>"]
 edition = "2018"
@@ -19,4 +19,5 @@ log = "0.4"
 notify = "4.0.12"
 serde = { version = "1.0", features = ["derive"] }
 simple_logger = "1.11.0"
+structopt = "0.3"
 winit = "0.24"
