--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,9 @@ glsl-watcher = { path = "components/glsl-watcher", version = "0.0.1" }
 glutin = "0.26"
 log = "0.4"
 notify = "4.0.12"
+regex = "1.5.4"
 serde = { version = "1.0", features = ["derive"] }
 simple_logger = "1.11.0"
 structopt = "0.3"
 winit = "0.24"
+which = "4.2.2" # Used for locating minime-preprocess
