--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,7 +2,7 @@ name: Rust
 
 on:
   push:
-    branches: [ main ]
+    branches: [ '**' ]
   pull_request:
     branches: [ main ]
 
@@ -11,16 +11,14 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
+      - name: Version
+        run: rustc --version && cargo clippy --version
       - name: Clippy
         run: cargo clippy
       - name: Format
         run: cargo fmt -- --check
-      - name: Build
-        run: cargo build --verbose
       - name: Run tests
         run: cargo test --verbose
