--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ notify = "4.0.12"
 regex = "1.5.4"
 serde = { version = "1.0", features = ["derive"] }
 simple_logger = "1.11.0"
-structopt = "0.3"
+quote = "1.0.10"
+clap = "^3.0.0-beta.4"
+#clap = { git = "https://github.com/clap-rs/clap/", version = "3.0.0-beta.4" } #clap-v3 = "3.0.0-beta.1"
 winit = "0.24"
 which = "4.2.2" # Used for locating minime-preprocess
