Adding a new watcher service

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ gl = "*"
 glam = "0.18"
 glsl-watcher = { path = "components/glsl-watcher", version = "0.0.1" }
 glutin = "0.26"
+#imgui-winit = "0.1.2"
 log = "0.4"
 notify = "4.0.12"
 regex = "1.5.4"
