--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
     "components/glsl-watcher",
     "components/macros",
+    "components/ui",
 ]
 
 [package]
@@ -33,3 +34,4 @@ clap = "^3.0.0-beta.4"
 #clap = { git = "https://github.com/clap-rs/clap/", version = "3.0.0-beta.4" } #clap-v3 = "3.0.0-beta.1"
 winit = "0.27"
 which = "4.2.2" # Used for locating minime-preprocess
+ui = { path = "components/ui", version = "0.1.0" }
