--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 members = [
     "components/glsl-watcher",
     "components/macros",
-    "components/ui",
+    "components/ui-backend",
 ]
 
 [package]
@@ -34,4 +34,4 @@ clap = "^3.0.0-beta.4"
 #clap = { git = "https://github.com/clap-rs/clap/", version = "3.0.0-beta.4" } #clap-v3 = "3.0.0-beta.1"
 winit = "0.27"
 which = "4.2.2" # Used for locating minime-preprocess
-ui = { path = "components/ui", version = "0.1.0" }
+ui-backend = { path = "components/ui-backend", version = "0.1.0" }
