--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,5 @@ clap = "^3.0.0-beta.4"
 winit = "0.27"
 which = "4.2.2" # Used for locating minime-preprocess
 ui-backend = { path = "components/ui-backend", version = "0.1.0" }
+minimp3 = "0.5.1"
+sdl2 = "0.35.2"
