--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ members = [
 [package]
 name = "skuggbox"
 version = "0.1.0"
-authors = ["Mathias Tervo <mathias.tervo@gmail.com>"]
+authors = ["vojd <github.com/vojd>", "klovman <github.com/bysse>"]
 edition = "2018"
 
 [dependencies]
@@ -19,7 +19,7 @@ glsl-watcher = { path = "components/glsl-watcher", version = "0.0.1" }
 
 anyhow = "1.0"
 bytemuck = "1.9"
-clap = "^3.0.0-beta.4"
+clap = { version = "4.3", features = ["derive"] }
 egui = { version = "0.22.0", features = ["bytemuck"]}
 egui-winit = { version = "0.22.0", optional = false, default-features = true }
 gl = "*"
