Upgrade winit, glutin and more packages to latest (#19)
Upgrades the following packages to latest

rust => 1.68
winit
glutin
glow
clap
Adds cargo-deny to help deal with dependencies and licenses

This PR tries to keep refactoring down to a minimum even though a big chunk should be refactored regarding window handling and rendering.

--- a/components/glsl-watcher/Cargo.toml
+++ b/components/glsl-watcher/Cargo.toml
@@ -3,8 +3,9 @@ name = "glsl-watcher"
 version = "0.0.1"
 authors = ["Mathias Tervo <mathias.tervo@gmail.com>"]
 edition = "2018"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-notify = "4.0.12"
+notify = "6.1"
