--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,30 +8,35 @@ members = [
 [package]
 name = "skuggbox"
 version = "0.1.0"
-authors = ["Mathias Tervo <mathias.tervo@gmail.com>"]
+authors = ["vojd <github.com/vojd>", "klovman <github.com/bysse>"]
 edition = "2018"
 
 [dependencies]
-anyhow = "1.0.38"
-egui = { version = "0.19.0", features = ["bytemuck"]}
-egui-winit = { version = "0.19.0", optional = false, default-features = true }
-bytemuck = "1.7"
-gl = "*"
-glam = "0.18"
-glow = "0.11"
-glsl-watcher = { path = "components/glsl-watcher", version = "0.0.1" }
-glutin = "0.29"
-log = "0.4"
-notify = "4.0.12"
-macros = { path = "components/macros", version = "0.1" }
-memoffset = "0.6"
-regex = "1.5.4"
-serde = { version = "1.0", features = ["derive"] }
-simple_logger = "1.11.0"
-tracing = { version = "0.1", default-features = false, features = ["std"] }
-quote = "1.0.10"
-clap = "^3.0.0-beta.4"
-#clap = { git = "https://github.com/clap-rs/clap/", version = "3.0.0-beta.4" } #clap-v3 = "3.0.0-beta.1"
-winit = "0.27"
-which = "4.2.2" # Used for locating minime-preprocess
+
+# local dependencies
 ui-backend = { path = "components/ui-backend", version = "0.1.0" }
+glsl-watcher = { path = "components/glsl-watcher", version = "0.0.1" }
+
+anyhow = "1.0"
+bytemuck = "1.9"
+clap = { version = "4.3", features = ["derive"] }
+egui = { version = "0.22.0", features = ["bytemuck"]}
+egui-winit = { version = "0.22.0", optional = false, default-features = true }
+gl = "*"
+glam = "0.24"
+glow = "0.12"
+glutin = "0.30"
+glutin-winit = "0.3.0"
+log = "0.4"
+macros = { path = "components/macros", version = "0.1" }
+memoffset = "0.9"
+# required by glutin to access the raw window handle from the &Window
+raw-window-handle = "0.5.0"
+regex = "1.9"
+serde = { version = "1.0", features = ["derive"] }
+simple_logger = "1"
+tracing = { version = "0.1", default-features = false, features = ["std"] }
+quote = "1.0"
+#clap = { git = "https://github.com/clap-rs/clap/", version = "3.0.0-beta.4" } #clap-v3 = "3.0.0-beta.1"
+winit = "0.28.6"
+which = "4.4" # Used for locating minime-preprocess
