--- a/components/macros/Cargo.toml
+++ b/components/macros/Cargo.toml
@@ -2,9 +2,10 @@
 name = "macros"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-glow = "0.11"
+glow = "0.12"
 tracing = { version = "0.1", default-features = false, features = ["std"] }
