--- a/components/ui-backend/Cargo.toml
+++ b/components/ui-backend/Cargo.toml
@@ -2,14 +2,15 @@
 name = "ui-backend"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bytemuck = "1.7"
-egui = { version = "0.19.0", features = ["bytemuck"]}
-egui-winit = { version = "0.19.0", optional = false, default-features = true }
-glow = "0.11"
+bytemuck = "1.9"
+egui = { version = "0.22.0", features = ["bytemuck"]}
+egui-winit = { version = "0.22.0", optional = false, default-features = true }
+glow = "0.12"
 macros = { path = "../macros", version = "0.1.0" }
 tracing = { version = "0.1", default-features = false, features = ["std"] }
-winit = "0.27"
+winit = "0.28.6"
