--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,8 @@ glsl-watcher = { path = "components/glsl-watcher", version = "0.0.1" }
 anyhow = "1.0"
 bytemuck = "1.9"
 clap = { version = "4.3", features = ["derive"] }
-egui = { version = "0.22.0", features = ["bytemuck"]}
+egui = { version = "0.22.0", features = ["bytemuck"] }
+egui_file = { version = "0.13" }
 egui-winit = { version = "0.22.0", optional = false, default-features = true }
 gl = "*"
 glam = "0.24"
@@ -36,7 +37,7 @@ regex = "1.9"
 serde = { version = "1.0", features = ["derive"] }
 simple_logger = "4.2"
 # simple_logger is dependent on `time`.
-time = { version = "0.3.26", features = ["local-offset"]}
+time = { version = "0.3.26", features = ["local-offset"] }
 tracing = { version = "0.1", default-features = false, features = ["std"] }
 quote = "1.0"
 #clap = { git = "https://github.com/clap-rs/clap/", version = "3.0.0-beta.4" } #clap-v3 = "3.0.0-beta.1"
