--- a/components/macros/Cargo.toml
+++ b/components/macros/Cargo.toml
@@ -7,5 +7,5 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-glow = "0.12"
-tracing = { version = "0.1", default-features = false, features = ["std"] }
+glow = { workspace = true }
+tracing = { workspace = true }
